cabal-version:      2.4
name:               som
version:            10.1.11
synopsis:           Self-Organising Maps
homepage:           https://github.com/mhwombat/som
bug-reports:        https://github.com/mhwombat/som/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           Math
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Data.Datamining.Clustering.Classifier
    Data.Datamining.Clustering.DSOM
    Data.Datamining.Clustering.DSOMInternal
    Data.Datamining.Clustering.SGM
    Data.Datamining.Clustering.SGM4
    Data.Datamining.Clustering.SGM4Internal
    Data.Datamining.Clustering.SGM6
    Data.Datamining.Clustering.SGM6Internal
    Data.Datamining.Clustering.SGMInternal
    Data.Datamining.Clustering.SOM
    Data.Datamining.Clustering.SOMInternal
    Data.Datamining.Pattern

  other-modules:    Paths_som
  ghc-options:      -Wall -Wunused-packages
  build-depends:
    , base        >=4.7    && <5
    , containers  >=0.5    && <0.7
    , deepseq     ^>=1.4
    , grid        ^>=7.8.14

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite som-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Data.Datamining.Clustering.DSOMQC
    Data.Datamining.Clustering.SGM4QC
    Data.Datamining.Clustering.SGM6QC
    Data.Datamining.Clustering.SGMQC
    Data.Datamining.Clustering.SOMQC
    Data.Datamining.PatternQC
    Paths_som

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , containers
    , deepseq
    , grid
    , QuickCheck
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
