cabal-version:      2.4
name:               som
version:            11.0.1
synopsis:           Self-Organising Maps
description:
  Please see the README on GitHub at <https://github.com/mhwombat/som#readme>
homepage:           https://github.com/mhwombat/som
bug-reports:        https://github.com/mhwombat/som/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           Math
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/som

common common-stuff
  default-language: Haskell2010

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    Data.Datamining.Clustering.Classifier
    Data.Datamining.Clustering.DSOM
    Data.Datamining.Clustering.DSOMInternal
    Data.Datamining.Clustering.SGM
    Data.Datamining.Clustering.SGM4
    Data.Datamining.Clustering.SGM4Internal
    Data.Datamining.Clustering.SGMInternal
    Data.Datamining.Clustering.SOM
    Data.Datamining.Clustering.SOMInternal
    Data.Datamining.Pattern
    Data.Datamining.Pattern.Numeric
    Data.Datamining.Pattern.List
  other-modules:   Paths_som
  autogen-modules: Paths_som
  ghc-options:     -Wall -Wunused-packages
  build-depends:
    , base        >=4.8    && <5
    , containers  >= 0.6.5 && < 0.7
    , deepseq     >= 1.4.4 && < 1.5
    , grid
    , QuickCheck

test-suite som-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Data.Datamining.Clustering.DSOMQC
    Data.Datamining.Clustering.SGM4QC
    Data.Datamining.Clustering.SGMQC
    Data.Datamining.Clustering.SOMQC
    Data.Datamining.Pattern.NumericQC
    Data.Datamining.Pattern.ListQC
    Data.Datamining.Pattern.TestUtils
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
  build-depends:
    , base
    , containers
    , deepseq
    , grid
    , numeric-tools
    , QuickCheck
    , quickcheck-with-counterexamples
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
